--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,6 @@
   </ion-header>
 
   <div id="container">
-    <strong>Hello</strong>
+    <strong>Hello my name is Benedict</strong>
   </div>
 </ion-content>
